<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddDevice">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/add_device_cap"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/device_name_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/device_name"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <EditText
            android:id="@+id/deviceNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/device_name"
            app:layout_constraintBaseline_toBaselineOf="@+id/device_name_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/device_name_id" />

        <TextView
            android:id="@+id/room_name_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/room_name"
            app:layout_constraintStart_toStartOf="@+id/device_name_id"
            app:layout_constraintTop_toBottomOf="@+id/device_name_id" />

        <EditText
            android:id="@+id/roomNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/room_name"
            app:layout_constraintBaseline_toBaselineOf="@+id/room_name_id"
            app:layout_constraintStart_toStartOf="@+id/deviceNameText" />

        <TextView
            android:id="@+id/group_name_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/group_name"
            app:layout_constraintStart_toStartOf="@+id/room_name_id"
            app:layout_constraintTop_toBottomOf="@+id/room_name_sub_id" />

        <EditText
            android:id="@+id/groupNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/group_name"
            app:layout_constraintStart_toStartOf="@+id/roomNameText"
            app:layout_constraintTop_toTopOf="@+id/group_name_id" />

        <TextView
            android:id="@+id/room_name_sub_id"
            android:layout_width="96dp"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:text="@string/room_name_sub"
            android:textAlignment="viewStart"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/room_name_id"
            app:layout_constraintTop_toBottomOf="@+id/room_name_id" />

        <ListView
            android:id="@+id/groupList"
            android:layout_width="128dp"
            android:layout_height="242dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/groupNameText"
            app:layout_constraintTop_toTopOf="@+id/groupNameText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>